# Real-Time-Audio-Recorder-and-Transcriber-using-Whisper-AI

./: README.md  pyproject.toml  ui_temp.py
